--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "cryptocompare": "^0.3.0",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
+    "node-fetch": "^1.7.3",
+    "pg": "^7.4.0",
     "pug": "2.0.0-beta11",
     "serve-favicon": "~2.4.5",
     "web3": "^1.0.0-beta.26"
