--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "cryptocompare": "^0.3.0",
     "debug": "~2.6.9",
+    "dotenv": "^4.0.0",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "node-fetch": "^1.7.3",
