--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node-fetch": "^1.7.3",
     "pg": "^7.4.0",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5",
+    "serve-favicon": "^2.4.5",
     "web3": "^1.0.0-beta.26"
   },
   "devDependencies": {
