--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
+    "moment": "^2.22.0",
     "morgan": "~1.9.0",
     "node-fetch": "^1.7.3",
     "pg": "^7.4.0",
